syntax = 'proto3';

package evaluation_pb;

service Evaluation {
  rpc ListEvaluationFlags(EvaluationInput) returns (EvaluationList) {}
  rpc FlagStat(FlagStatInput) returns (noop) {}
}

message EvaluationInput {
  string tenant_id = 1;
  string user_id = 2;
}

message EvaluationFlag {
  string name = 1;
  bool enabled = 2;
}

message EvaluationList {
  repeated EvaluationFlag evaluation_flag = 1;
}

message FlagStatInput {
  string tenant_id = 1;
  string user_id = 2;
  string flag_id = 3;
  bool enabled = 4;
}

message noop {}
